# basic_offboard_px4

./: .gitignore  .pre-commit-config.yaml  Dockerfile  PULL_REQUEST_TEMPLATE.md  README.md  entrypoint.sh
.github/workflows/: docker-build.yml  docker-image.yml  ros-build-test.yml  ros-build.yml
src/modules/mission_control/: CMakeLists.txt  CMakelists.txt  package.xml
src/modules/mission_control/include/: mission_control.hpp
src/modules/mission_control/include/mission_control/: mission_control.hpp
src/modules/mission_control/src/: mission_control.cpp  mission_control_main.cpp
